# quest_note

./: .gitignore  CNAME  README.md  index.html  pyproject.toml  serve.py
.github/workflows/: deploy.yml
src/: app.py  index.html
src/quest_note/: app.py
src/static/css/: style.css
src/static/js/: editor.js
src/templates/: index.html
static/js/: editor.js
static/templates/: main.html  welcome.html
