[project]
name = "quest-note"
version = "0.1.0"
description = "An application to help writers meet their word count goals in a fun game-like structure."
authors = [
    {name = "logan.puatu",email = "loganjpuatu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.1.3"

[tool.poetry]
package-mode = false
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
flask = "^3.1.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
PyGithub = "^2.1.4"
