[project]
name = "quest-note"
version = "0.1.0"
description = "A web application to help writers meet their word count goals with a gamified interface"
authors = [
    {name = "logan.puatu", email = "loganjpuatu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.0,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]